public_html/assets/style.css
/* ... */
.recording select {
  margin-left: auto;
  margin-bottom: 1rem;
  margin-right: 2rem;
}

.box {
  display: block;
  padding: 0 2rem 2rem 2rem;
}
.card {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  height: 12rem;
  width: 26rem;
  max-width: 100%;
  border: var(--border-size) solid var(--color-background-field);
  border-radius: var(--border-radius);
}
.card > img {
  position: absolute;
  width: 100%;
  height: inherit;
  border-radius: inherit;
  object-fit: cover;
}
.content {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.4rem 0.6rem;
  -webkit-backdrop-filter: blur(0.5rem) saturate(.7);
  backdrop-filter: blur(20px) saturate(.7) brightness(.5);
  border-top: var(--border-size) solid var(--color-background-field);
  border-bottom-left-radius: inherit;
  border-bottom-right-radius: inherit;
}
.card-grid {
  display: grid;
  gap: 2rem;
  grid-template-columns: repeat(
    auto-fit,
    minmax(min(18rem, 100%), max-content)
  );
}
.card-grid + h2 {
  margin-top: 3em;
}

header {
  background-color: var(--color-background-alternative);
  border-bottom: var(--border-size) solid var(--color-background-field);
  padding: 0.5rem 0;
  width: 100%;
  display: flex;
  justify-content: center;
}
header p, header h4 {
  margin: 0 1rem;
}

.icon {
  border: none;
  background: none;
  padding: 0;
  color: var(--color-text);
}
.icon-main {
  font-size: 2.5rem;
}
.icon-button {
  position: relative;
  display: flex;
  --icon-button-size: 2.4rem;
}
.icon-button::after {
  content: '';
  height: var(--icon-button-size);
  width: var(--icon-button-size);
  transition: background-color 150ms ease-in;
  border-radius: 50%;
}
.icon-button:hover::after,
.icon-button:focus::after {
  background-color: var(--color-lightened);
}
.icon-button > svg {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: calc(var(--icon-button-size) / 100 * 65);
  height: calc(var(--icon-button-size) / 100 * 65);
  fill: var(--color-text);
}

dialog {
  background-color: transparent;
  border: none;
  width: 60rem;
  height: 40rem;
}
::backdrop {
  backdrop-filter: blur(20px) brightness(.6);
}
.dialog-content {
  border: var(--color-background-field) solid var(--border-size);
  border-radius: var(--border-radius);
  background-color: var(--color-background);
  box-sizing: border-box;
  width: 100%;
  height: 100%;
}

.pagination {
  position: fixed;
  bottom: 0;
  width: 100%;
  display: flex;
  justify-content: space-evenly;
}
.pagination > div {
  display: flex;
  background-color: dimgray;
  border-top-left-radius: var(--border-radius);
  border-top-right-radius: var(--border-radius);
}
.pagination a {
  padding: 0.3em 0.6em;
}
.pagination a[aria-current="page"] {
  background-color: var(--color-background);
}

form {
  width: 100%;
  max-width: 40rem;
  padding: 0 1rem 0 1rem;
  box-sizing: border-box;
}
fieldset {
  margin-top: 1.5rem;
  border: var(--border-size) dashed var(--color-lightened);
  border-radius: var(--border-radius);
  background-color: var(--color-background-alternative);
}
input,
textarea,
select,
form button,
button[type="submit"] {
  display: block;
  padding: 0.4em;
  border: var(--border-size) solid var(--color-border-field);
  border-radius: calc(var(--border-radius) / 2);
  box-sizing: border-box;
  font-size: medium;
  background-color: var(--color-background-field);
  font-family: inherit;
}
input::placeholder,
textarea::placeholder,
select::placeholder {
  color: var(--color-muted-text);
}
form input,
form textarea,
form select,
form button,
form p,
button[type="submit"] {
  margin-top: 1rem;
}
input[type="text"],
textarea {
  width: 100%;
}
input[type="range"] {
  margin-top: 0;
  padding: 0;
  width: 100%;
}
button > svg {
  fill: var(--color-text);
}
button[type="submit"] {
  float: right;
  cursor: pointer;
}
button[type="submit"] > svg {
  transition: height 150ms ease-in-out, padding 150ms ease-in-out;
  height: 0;
  padding-left: 0;
}
button[type="submit"]:hover > svg {
  height: 1.3ch;
  padding-left: 0.5ch;
}

.message-frame {
  position: absolute;
  top: 1rem;
  right: 1rem;
  width: 16rem;
  height: 8rem;
  z-index: 1;
  pointer-events: none;
}
.message-body {
  background-color: transparent;
  overflow-x: hidden;
}
.message {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: end;
  width: 16rem;
  height: 8rem;
  padding: 1rem;

  box-sizing: border-box;
  border-bottom-left-radius: var(--border-radius);
  border-top: 0.15rem solid;
  border-right: 0.15rem solid;
  -webkit-backdrop-filter: blur(0.5rem);
  backdrop-filter: blur(0.5rem) brightness(70%);

  animation: 5s ease-in forwards message;
}
.info {
  border-color: var(--color-info);
  background-color: var(--color-info-background);
}
.success {
  border-color: var(--color-success);
  background-color: var(--color-success-background);
}
.warn {
  border-color: var(--color-warn);
  background-color: var(--color-warn-background);
}
.error {
  border-color: var(--color-error);
  background-color: var(--color-error-background);
}
.message > h4 {
  text-transform: uppercase;
}
.message > p {
  margin-top: 0.5rem;
  font-size: 0.85rem;
}
@keyframes message {
  0% {
    transform: translateX(100%);
  }
  7% {
    transform: translateX(0);
  }
  93% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(100%);
    visibility: hidden;
  }
}

.recorder {
  position: relative;
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
}
.recorder .icon > svg {
  fill: var(--color-text);
}
.recorder > .controls {
  bottom: 0;
  width: 100%;
  padding: 0.8rem;
  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
  background-color: var(--color-background-alternative);
  border-bottom-left-radius: inherit;
  border-bottom-right-radius: inherit;
}
.recorder .controls > .icon-main > svg {
  display: none;
}
/* ... */

